# DevTemplate

./: CMakeLists.txt  README.md
ConverterLib/: CMakeLists.txt  Converter.cpp  Converter.h
LIB_1/: CMakeLists.txt  NAME_1.cpp  NAME_1.h
LIB_2/: CMakeLists.txt  NAME_2.cpp  NAME_2.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_Converter.cpp  test_NAME_1.cpp  test_NAME_2.cpp
